# rust-massa-web3

./: .env.exemple  Cargo.toml
src/: constants.rs  lib.rs  types.rs
src/basic_elements/: args.rs  keys.rs  mod.rs  next_arg.rs  serializers.rs
src/client/: grpc_client.rs
src/crypto/: base58.rs  mod.rs
src/crypto/traits/: mod.rs  serializer.rs
src/helpers/: events.rs
src/types/: event.rs  mod.rs
