[package]
name = "rust-massa-web3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tonic = "0.12"
massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", branch = "main", features = [
    "tonic",
] }
massa_signature = { git = "https://github.com/massalabs/massa.git", branch = "main", package = "massa_signature" }
massa_models = { git = "https://github.com/massalabs/massa.git", branch = "main", package = "massa_models" }
massa_serialization = { git = "https://github.com/massalabs/massa.git", branch = "main", package = "massa_serialization" }
alloy-primitives = "1.0.0"
byteorder = "1.5.0"
rand = "0.9.1"
tokio-stream = "0.1.17"
serde = { version = "1.0.219", features = ["derive"] }
